gitops/apps/photoapp/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoapp
spec:
  selector:
    matchLabels:
      app: photoapp
  replicas: 3
  template:
    metadata:
      labels:
        app: photoapp
    spec:
      containers:
        - image: ravindrasingh6969/nodeapp:latest
          name: photoapp
          ports:
            - containerPort: 8080
