gitops/apps/photoapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoapp
spec:
  ports:
    - port: 80 #service port  #kubeproxy will open port on worker node to which can route traffic to alb
      targetPort: 8080 #container port
      protocol: TCP
  type: ClusterIP
  selector:
    app: photoapp
